# bzip2-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: decoder_reader.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress.rs  decompress_parallel.rs  interop_decode.rs  interop_decode_parallel.rs
src/: bitreader.rs  block_common.rs  crc.rs  huffman.rs  lib.rs  move_to_front.rs  read_write_state.rs  threadpool.rs
src/block/: bwt.rs  error.rs  mod.rs
src/decoder/: error.rs  mod.rs  reader.rs  state.rs
src/decoder/block/: decoder.rs  error.rs  mod.rs  reader.rs
src/decoder/parallel/: mod.rs  reader.rs  util.rs
src/decoder/parallel/scanner/: iter.rs  linear.rs  mod.rs  threaded.rs
src/encblock/: blocksort.rs  mod.rs
src/encoder/: error.rs  mod.rs
src/encoder/block/: blocksort.rs  mod.rs
src/header/: error.rs  mod.rs
tests/: decode_reader.rs  parallel_decode_reader.rs
