[package]
name = "bzip2-rs"
version = "0.1.2"
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
description = "Pure Rust bzip2 decompressor"
license = "MIT/Apache-2.0"
categories = ["compression"]
keywords = ["bzip2"]
repository = "https://github.com/paolobarbolini/bzip2-rs"
readme = "README.md"
edition = "2018"

[dependencies]
crc32fast = "1.2.1"
tinyvec = "1.5"

rayon-core = { version = "1.5", optional = true }

[dev-dependencies]
# bench
criterion = "0.4"
bzip2 = "0.4.1"

[features]
default = []

# Crate features

# use rayon as the bzip2_rs::ThreadPool
rayon = ["rayon-core"]

# MSRV

rustc_1_37 = []
rustc_1_55 = ["rustc_1_37", "tinyvec/rustc_1_55"]
rustc_1_63 = ["rustc_1_55", "tinyvec/rustc_1_55"]
nightly = ["rustc_1_63", "crc32fast/nightly"]

[package.metadata.docs.rs]
features = ["rayon"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "decoder_reader"
