[package]
name = "bzip2-rs"
version = "0.1.2"
authors = ["Paolo Barbolini <paolo@paolo565.org>"]
description = "Pure Rust bzip2 decompressor"
license = "MIT OR Apache-2.0"
categories = ["compression"]
keywords = ["bzip2"]
repository = "https://github.com/paolobarbolini/bzip2-rs"
readme = "README.md"
edition = "2018"
rust-version = "1.63"

[dependencies]
crc32fast = "1.2.1"
tinyvec = { version = "1.7", features = ["rustc_1_61"] }

rayon-core = { version = "1.5", optional = true }

[dev-dependencies]
# bench
criterion = "0.5"
bzip2 = ">= 0.4.1, <0.6"

[features]
default = []

# Crate features

# use rayon as the bzip2_rs::ThreadPool
rayon = ["rayon-core"]

# MSRV

nightly = ["crc32fast/nightly"]

[package.metadata.docs.rs]
features = ["rayon"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "decoder_reader"
